fixed search by date issue and breadcrumbs on the PD Landing page

--- a/clickthru/PDLandingPage.html
+++ b/clickthru/PDLandingPage.html
@@ -256,9 +256,8 @@
                                     <a href="#">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Materials Support</a>
-                                </li>
-                                <li>Advanced Search</li>
+                                    <a href="#">Professional Development</a>
+                                
                             </ul>
                         </div>
                     </div>
@@ -286,13 +285,13 @@
 
                     </div>
                     <!-- / search bar -->
-                    <div class="row">
+                    <!--div class="row"-->
 
                         <div class="col-md-2">
 
                             <div class="row">
 
-                                <div class="panel panel-default" style="margin-left: 0px">
+                                <div class="panel panel-default">
                                     <div class="panel-heading"> Search by Date
                                         <i class="glyphicon glyphicon-search"></i>
                                     </div>
@@ -300,24 +299,24 @@
                                         <!-- Date Picker goes here -->
 
                                         <div class="form-group">
-                                            <label for="start" style="width: 125px; text-align: left;padding-right: 5px; padding-left: 0;" class="col-sm-2 control-label">Starts On or After</label>
-                                            <div style=" width: 155px; padding-left:0; padding-right: 10px;" class="col-md-2">
+                                            <label for="start" style="width: 125px; text-align: left;padding-right: 3px; padding-left: 0;" class="col-sm-2 control-label">Starts On or After</label>
+                                            <!--div style=" width: 155px; padding-left:0; padding-right: 10px;" class="col-md-2"-->
                                                 <input type="date" class="form-control" id="start">
-                                            </div>
-                                            <label for="end" style="width: 120px; text-align: left;padding-right: 3px; padding-left: 0;" class="col-sm-2 control-label">End On or Before</label>
-                                            <div class="col-sm-2" style=" width: 155px; padding-left:0; padding-right: 10;">
+                                            <!--/div-->
+                                            <label for="end" style="width: 125px; text-align: left;padding-right: 3px; padding-left: 0;" class="col-sm-2 control-label">End On or Before</label>
+                                            <!--div class="col-sm-2" style=" width: 155px; padding-left:0; padding-right: 10;"-->
                                                 <input type="date" class="form-control" id="end">
-                                            </div>
-                                            <input class="form-control top-buffer" type="button" value="search">
+                                            <!--/div-->
+                                            <input class="form-control" style="margin-top: 20px;" type="button" value="search">
                                         </div>
                                     </div>
                                 </div>
-
+                        </div>
                                 <div class="row">
                                     <div class = "panel panel-default">
                                         <div class="panel-heading">Recently Viewed</div>
                                         <div class="panel-body">
-                                            <!-- list group -->
+                                            <!-- l.ist group -->
                                             <!--ul class ="list-group">
                                                 <li class ="list-group-item"> PD1 </li>
                                                 <li class ="list-group-item"> PD2 </li>
@@ -366,7 +365,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            <!--/div-->
                         </div>
                         <div class ="col-md-8 col-md-offset-1">
                             <!-- First PD -->
@@ -445,7 +444,7 @@
 
                         </div>
 
-                    </div>
+                    <!--/div-->
                 </div>
 
             </div>
