update header and popup links for home after login

--- a/clickthru/online_service_home_after_login.html
+++ b/clickthru/online_service_home_after_login.html
@@ -99,7 +99,7 @@
 						<div class="modal-body">
 							Related Material</br>
 							<ul>
-							<li><a href="">FOSS Fabric</a></li>
+							<li><a href="PD_Details_Page.html">FOSS Fabric</a></li>
 							<li><a href="">FOSS Fabric Lease Extension</a></li>
 							<li><a href="">FOSS Fabric - Refill Kit</a></li>
 							<li><a href="">FOSS Fabric - xConsume</a></li>
@@ -246,7 +246,7 @@
                                 <nav>
                                     <ul class="submenu">
                                         <li><a class="active_sub" href="#">Home</a></li>
-                                        <li><a href="#">Professional Development</a></li>
+                                        <li><a href="PDLandingPage.html">Professional Development</a></li>
                                         <li><a href="#">Materials Support</a></li>
                                         <li><a  href="#">Customer Support</a></li>
 
@@ -291,29 +291,6 @@
             <div class="body-wrapper">
                 <div class="container" style="width:100%">
                     <!-- PAGE CONTENTS SHOULD GO HERE, DELETE CONTENTS WITHIN THE CONTAINER DIV AND PASTE YOUR OWN CONTENT-->
-                    <!-- Login Modal -->
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h3 class="modal-title">Please sign in</h3>
-						</div>
-						<div class="modal-body">
-							<form class="form-signin">
-								<input type="text" class="form-control" placeholder="Email address" autofocus="">
-									<input type="password" class="form-control" placeholder="Password">
-										<label class="checkbox">
-											<input type="checkbox" value="remember-me"> Remember me
-												</label>
-										</form>
-						</div>
-						<div class="modal-footer">
-							<button class="btn btn-lg btn-primary" type="submit" onclick="document.location.href='Home_loggedin.html'" >Sign in</button>
-						</div>
-					</div><!-- /.modal-content -->
-				</div><!-- /.modal-dialog -->
-			</div><!-- /.modal -->
 			
 			<!--sidebar-->
 			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation" style="padding-left: 0;padding-top: 20px;width:23%;font-size:small">
