underline clickable link in product family

--- a/clickthru/online_service_home_before_login.html
+++ b/clickthru/online_service_home_before_login.html
@@ -366,7 +366,7 @@
 				  My Senses<br>
 				  Trees</td>
 				  <td></td>
-				  <td><a data-toggle="modal" href="#pfModal">Fabric</a><br>
+				  <td><a data-toggle="modal" href="#pfModal" style="color:#428bca;text-decoration:underline">Fabric</a><br>
 				  Patterns All Around<br>
 				  Push Pull Go<br>
 				  Wood &amp; Paper</td>
