Added links and fixed view schedule error

--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -253,10 +253,10 @@
                         <div class="col-xs-12">
                             <ul class="breadcrumbs">
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="online_service_home_after_login.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">Professional Development</a>
+                                    <a href="PDLandingPage.html">Professional Development</a>
                                 </li>
                                 <li>Fabric FOSS</li>
                             </ul>
@@ -554,7 +554,7 @@
                                                             </div>
                                                             <div class="row" style="margin-top: 20px">
                                                                 <div class="collapse-group">
-                                                                    <div class="collapse" id="viewFullSchedule">
+                                                                    <div class="collapse" id="viewFullSchedule2">
                                                                         <table class="table table-bordered">
                                                                             <thead>
                                                                                 <tr>
@@ -586,7 +586,7 @@
                                                                             </tbody>
                                                                         </table>
                                                                     </div>
-                                                                    <p> <a class="btn btn-defualt" data-toggle="collapse" data-target="#viewFullSchedule">
+                                                                    <p> <a class="btn btn-defualt" data-toggle="collapse" data-target="#viewFullSchedule2">
                                                                             View Full Schedule &raquo;
                                                                         </a></p>
                                                                 </div>
