--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -478,7 +478,7 @@
                                                             </div>
                                                             <div class="row" style="margin-top: 20px">
                                                                 <div class="collapse-group">
-                                                                    <div class="collapse" id="viewFullSchedule">
+                                                                    <div class="collapse in" id="viewFullSchedule">
                                                                         <table class="table table-bordered">
                                                                             <thead>
                                                                                 <tr>
