Adding view schedule modal to all Displayed PDs

--- a/clickthru/PDLandingPage.html
+++ b/clickthru/PDLandingPage.html
@@ -387,7 +387,7 @@
                                     <img class="media-object" src="img/FabricFOSS.png" height="60" width="60">
                                 </a>                            
                                 <div class="media-body">
-                                    <h4 class="media-heading content-label"><a href="View%20Schedule.html#myModal">Fabric FOSS </a></h4>
+                                    <h4 class="media-heading content-label"><a href="PD_Details_Page.html">Fabric FOSS </a></h4>
                                     <span class="label label-warning"><a data-toggle="modal" href="#myModal">View Schedule</a></span>
                                     <p class="content-label"> Fabric, a material so often taken for granted, makes a fascinating study for early-childhood
                                         students. In the Fabric module, students are introduced to a wide variety of fabrics in a
@@ -404,6 +404,7 @@
                                 </a>                            
                                 <div class="media-body">
                                     <h4 class="media-heading content-label"> <a href="#"> Wood & Paper</a> </h4>
+                                    <span class="label label-warning"><a data-toggle="modal" href="#myModal">View Schedule</a></span>
                                     <p class="content-label"> The modern world is a wonderland of different materials for early-childhood students. Two of
                                         those materials are wood and the paper that is derived from it. In the Wood and Paper module,
                                         students are introduced to a wide variety of woods and papers in a systematic way... </p>
@@ -419,6 +420,7 @@
                                 </a>                            
                                 <div class="media-body">
                                     <h4 class="media-heading content-label"> <a href="#"> Patterns All Around BBS</a> </h4>
+                                    <span class="label label-warning"><a data-toggle="modal" href="#myModal">View Schedule</a></span>
                                     <p class="content-label"> Bright blocks, real seashells, white clouds in a blue sky, finding the moon and the school bus
                                         stopping at the mailbox - is there a connection? Build on students’ intuitive sense of patterns
                                         with a series of seven lessons developed for today’s kindergarten scientist...</p>
@@ -434,6 +436,7 @@
                                 </a>                            
                                 <div class="media-body">
                                     <h4 class="media-heading content-label"> <a href="#"> Push Pull Go BBS</a> </h4>
+                                    <span class="label label-warning"><a data-toggle="modal" href="#myModal">View Schedule</a></span>
                                     <p class="content-label"> Build it, push it and watch it go. Students discover the patterns of how objects move as they
                                         work through a series of lessons about motion. In the tradition of Rube Goldberg, your young
                                         scientists build action toys that move...</p>
