--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -60,7 +60,17 @@
 
         </style>
         <!-- end remprod -->
-
+        
+         <style type = "text/css">
+            #myModal .modal-dialog{
+                width: 900px;
+            }
+            #myModal .modal-body { max-height: 800px;}
+            /* #myModal {
+               width: 400px; /* SET THE WIDTH OF THE MODAL */
+            /*margin: -250px 0 0 -450px; /* CHANGE MARGINS TO ACCOMODATE THE NEW WIDTH (original = margin: -250px 0 0 -280px;) */
+            /*}*/
+        </style>
 
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 
@@ -471,7 +481,7 @@
                                                                                 </div>                                                                                                                                           
                                                                         </li>
                                                                         <li class="list-group-item"> 
-                                                                            <button type="button" id="submit" class="btn btn-default">Add to Cart</button>
+                                                                            <a data-toggle="modal" href="#myModal" class="btn btn-default">Add to Cart</a>
                                                                         </li>
                                                                     </ul>
                                                                 </div>
@@ -547,7 +557,7 @@
                                                                                 </div>                                                                                                                                           
                                                                         </li>
                                                                         <li class="list-group-item"> 
-                                                                            <button type="button" id="submit" class="btn btn-default">Add to Cart</button>
+                                                                            <a data-toggle="modal" href="#myModal" class="btn btn-default">Add to Cart</a>
                                                                         </li>
                                                                     </ul>
                                                                 </div>
@@ -671,5 +681,24 @@
             });
 
         </script>
+        
+                <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-width="760">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title content-label" id="myModalLabel">Add to Cart</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="content-label">Do you want to add 2 seats of Fabric FOSS PD to your cart ?</p>                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button class="btn btn-success" type="submit" onclick="document.location.href = 'online_service_cart.html'" >Add To Cart</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     </body>
 </html>
