--- a/clickthru/MyAccount_ChangePassword.html
+++ b/clickthru/MyAccount_ChangePassword.html
@@ -212,11 +212,11 @@
                                 <nav>
                                     <ul class="submenu">
                                         <li><a  href="online_service_home_after_login.html">Home</a></li>
-                                        <li><a  href="PDLandingPage.html">Professional Development</a></li>
-                                        <li><a  href="#">Materials Support</a></li>
-                                        <li><a  href="#">Customer Support</a></li>                                        
-                                        <li><a  class="active_sub" href="MyAccount_MyProfile.html">My Account</a></li>
-                                        <li><a  href="#">My Cart<a></li>
+                                        <li><a class="active_sub" href="PDLandingPage.html">Professional Development</a></li>
+                                        <li><a  href="advanced-material-search.html">Materials Support</a></li>
+                                        <li><a  href="#">Customer Support</a></li>
+										<li><a  class="active_sub" href="MyAccount_MyProfile.html">My Account</a></li>
+                                        <li><a  href="online_service_cart.html">My Cart<a></li>
                                     </ul>
                                 </nav>
 
