--- a/clickthru/online_service_home_before_login.html
+++ b/clickthru/online_service_home_before_login.html
@@ -97,7 +97,7 @@
 										</form>
 						</div>
 						<div class="modal-footer">
-							<button class="btn btn-lg btn-primary" type="submit" onclick="document.location.href='online_service_home_after_loginin.html'" >Sign in</button>
+							<button class="btn btn-lg btn-primary" type="submit" onclick="document.location.href='online_service_home_after_login.html'" >Sign in</button>
 						</div>
 					</div><!-- /.modal-content -->
 				</div><!-- /.modal-dialog -->
@@ -117,7 +117,7 @@
 						<div class="modal-header">
 							Related PD Offerings</br>
 							<ul>
-							<li><a href="">Fabric(FOSS)</a></li>
+							<li><a href="PD_Details_Page.html">Fabric(FOSS)</a></li>
 							</ul>
 						</div>
 						<div class="modal-body">
@@ -269,9 +269,9 @@
 
                                 <nav>
                                     <ul class="submenu">
-                                        <li><a class="active_sub" href="#">Home</a></li>
-                                        <li><a href="#">Professional Development</a></li>
-                                        <li><a href="#">Materials Support</a></li>
+                                        <li><a  href="online_service_home_after_login.html">Home</a></li>
+                                        <li><a class="active_sub" href="PDLandingPage.html">Professional Development</a></li>
+                                        <li><a  href="advanced-material-search.html">Materials Support</a></li>
                                         <li><a  href="#">Customer Support</a></li>
 
                                     </ul>
