--- a/clickthru/advanced-material-search.html
+++ b/clickthru/advanced-material-search.html
@@ -215,10 +215,12 @@
                                 
                                 <nav>
                                     <ul class="submenu">
-                                        <li><a  href="#">Home</a></li>
-                                        <li><a   href="#">Professional Development</a></li>
-                                        <li><a class="active_sub" href="#">Materials Support</a></li>
+                                        <li><a  href="online_service_home_after_login.html">Home</a></li>
+                                        <li><a href="PDLandingPage.html">Professional Development</a></li>
+                                        <li><a  class="active_sub" href="advanced-material-search.html">Materials Support</a></li>
                                         <li><a  href="#">Customer Support</a></li>
+										<li><a  href="MyAccount_MyProfile.html">My Account</a></li>
+                                        <li><a  href="online_service_cart.html">My Cart<a></li>
 
                                     </ul>
                                 </nav>
