--- a/clickthru/index.html
+++ b/clickthru/index.html
@@ -78,6 +78,29 @@
         <!-- Sticky Nav -->
         <div class="sticky-navigation" id="sticky-navigation"></div>
         <!-- Sticky Nav -->
+		<!-- Login Modal -->
+			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h3 class="modal-title">Please sign in</h3>
+						</div>
+						<div class="modal-body">
+							<form class="form-signin">
+								<input type="text" class="form-control" placeholder="Email address" autofocus="">
+									<input type="password" class="form-control" placeholder="Password">
+										<label class="checkbox">
+											<input type="checkbox" value="remember-me"> Remember me
+												</label>
+										</form>
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-lg btn-primary" type="submit" onclick="document.location.href='online_service_home_after_login.html'" >Sign in</button>
+						</div>
+					</div><!-- /.modal-content -->
+				</div><!-- /.modal-dialog -->
+			</div><!-- /.modal -->
 
 
         <div id="wrapper" class="boxed">
@@ -194,9 +217,9 @@
 
                                         </li>
                                         <li  class="drop">
-                                            <a href="#">Services Online</a>
+                                            <a href="online_service_home_before_login.html">Services Online</a>
                                             <ul><li>
-                                                    <a href="#">Member Login</a> </ul>
+                                                    <a data-toggle="modal" href="#myModal">Member Login</a> </ul>
 
                                         </li>
 
