Added headed to all pages
Make few changes  to the pd landing page in terms of alignment and font
size

--- a/clickthru/MyAccount_MyProfile.html
+++ b/clickthru/MyAccount_MyProfile.html
@@ -210,15 +210,23 @@
 
                                 </nav>
 
-                                <nav>
-                                    <ul class="submenu">
-                                        <li><a  href="online_service_home_after_login.html">Home</a></li>
-                                        <li><a  href="PDLandingPage.html">Professional Development</a></li>
-                                        <li><a  href="advanced-material-search.html">Materials Support</a></li>
-                                        <li><a  href="#">Customer Support</a></li>
-										<li><a  class="active_sub" href="MyAccount_MyProfile.html">My Account</a></li>
-                                        <li><a  href="online_service_cart.html">My Cart<a></li>
-                                    </ul>
+                                  <nav>
+										<ul class="in-menu nav navbar-nav">
+                                                                            <li><a  href="online_service_home_after_login.html">Home</a></li>
+                                                                            <li><a   href="PDLandingPage.html">Professional Development</a></li>
+                                                                            <li><a href="advanced-material-search.html">Materials Support</a></li>
+                                                                            <li><a  href="#">Customer Support</a></li>
+                                                                            <li class="dropdown">
+                                                                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                                                                Welcome Chenyu <span class="caret"></span>
+                                                                            </a>
+                                                                            <ul class="dropdown-menu" role="menu">
+                                                                             <li><a  href="MyAccount_MyProfile.html">My Account</a></li>
+                                                                             <li><a  href="online_service_cart.html">My Cart</a></li>
+                                                                         </ul>
+                                                                     </li>
+                                                                 </ul>
+                                   
                                 </nav>
 
                                 <!-- Mobile Nav. Container -->
@@ -358,11 +366,10 @@
             <script type="text/javascript" src="js/_jq.js"></script>
             <script type="text/javascript" src="js/_jquery.placeholder.js"></script>
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
-            <script type="text/javascript" src="js/bootstrap.js"></script>
+  
             <script src="js/activeaxon_menu.js" type="text/javascript"></script>
             <script src="js/animationEnigne.js" type="text/javascript"></script>
             <script src="js/arwa.js" type="text/javascript"></script>
-            <script src="js/bootstrap.min.js" type="text/javascript"></script>
             <script src="js/ie-fixes.js" type="text/javascript"></script>
             <script src="js/jquery.base64.js" type="text/javascript"></script>
             <script src="js/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>
