--- a/clickthru/online_service_home_before_login.html
+++ b/clickthru/online_service_home_before_login.html
@@ -162,120 +162,117 @@
                                 <!-- //Mobile Button Menu// -->
 
 
-                                <!--                                 Search Box 
-                                                                <div class="searchbox">
-                                                                    <form action="#" method="get">
-                                                                        <input type="text" class="searchbox-inputtext" id="searchbox-inputtext" name="s"/>
-                                                                        <label class="searchbox-icon" for="searchbox-inputtext"></label>
-                                                                        <input type="submit" class="searchbox-submit" value="Search"/>
-                                                                    </form>
-                                                                </div>-->
-                                <!-- //Search Box// -->
 
-                                <nav>
-                                    <ul class="navigation">
+                                 <ul class="navigation">
 
-                                        <li class="drop">
-                                            <a href="#">About Us</a>
-                                            <ul>
-                                                <li>
-                                                    <a href="#">About ASSET</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Our Leadership</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Our Formula</a>
-                                                    <ul>
+                                                                        <li class="drop">
+                                                                            <a href="#">About Us</a>
+                                                                            <ul>
+                                                                                <li>
+                                                                                    <a href="#">About ASSET</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">Our Leadership</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">Our Formula</a>
+                                                                                    <ul>
 
-                                                        <li>
-                                                            <a href="#">ASSET Programs</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">i3 Program</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Grant Assistance</a>
-                                                        </li>
-                                                    </ul>
+                                                                                        <li>
+                                                                                            <a href="#">ASSET Programs</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">i3 Program</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Grant Assistance</a>
+                                                                                        </li>
+                                                                                    </ul>
 
-                                                </li>
-                                                <li>
-                                                    <a href="#">Our Impact</a>
-                                                    <ul>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">Our Impact</a>
+                                                                                    <ul>
 
-                                                        <li>
-                                                            <a href="#">Result</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Testimonial</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Submit Your Story</a>
-                                                        </li>
-                                                    </ul>
+                                                                                        <li>
+                                                                                            <a href="#">Result</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Testimonial</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Submit Your Story</a>
+                                                                                        </li>
+                                                                                    </ul>
 
-                                                </li>
+                                                                                </li>
 
 
-                                            </ul>
-                                        </li>
+                                                                            </ul>
+                                                                        </li>
 
-                                        <li class="drop">
-                                            <a href="#">Engage With Us</a>
-                                            <ul>
+                                                                        <li class="drop">
+                                                                            <a href="#">Engage With Us</a>
+                                                                            <ul>
 
-                                                <li>
-                                                    <a href="#">Become A Member</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Volunteer Opportunities</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Corporate Partnerships</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">STEM Conference</a>
-                                                </li>
-                                            </ul>
+                                                                                <li>
+                                                                                    <a href="#">Become A Member</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">Volunteer Opportunities</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">Corporate Partnerships</a>
+                                                                                </li>
+                                                                                <li>
+                                                                                    <a href="#">STEM Conference</a>
+                                                                                </li>
+                                                                            </ul>
 
-                                        </li>
+                                                                        </li>
 
 
 
-                                        <li>
-                                            <a href="#">Donate Now</a>
+                                                                        <li>
+                                                                            <a href="#">Donate Now</a>
 
-                                        </li>
-                                        <li>
-                                            <a href="#">Blog</a>
+                                                                        </li>
+                                                                        <li>
+                                                                            <a href="#">Blog</a>
 
-                                        </li>
-                                        <li>
-                                            <a href="#">Contact Us</a>
+                                                                        </li>
+                                                                        <li>
+                                                                            <a href="#">Contact Us</a>
 
-                                        </li>
-                                        <li  class="drop">
-                                            <a class="serviceonline" href="#">Services Online</a>
-                                            <ul><li>
-                                                    <a data-toggle="modal" href="#myModal">Member Login</a> </ul>
+                                                                        </li>
+                                                                        <li  class="drop">
+                                                                            <a class="serviceonline" href="#">Services Online</a>
+                                                                            <ul>
+																			<li>
+                                                                                <a href="#">Member Login</a>
+																				</li> 
+																				</ul>
 
-                                        </li>
+                                                                            </li>
 
 
-                                    </ul>
-
-                                </nav>
-
-                                <nav>
-                                    <ul class="submenu">
-                                        <li><a  href="online_service_home_after_login.html">Home</a></li>
-                                        <li><a class="active_sub" href="PDLandingPage.html">Professional Development</a></li>
-                                        <li><a  href="advanced-material-search.html">Materials Support</a></li>
-                                        <li><a  href="#">Customer Support</a></li>
-
-                                    </ul>
-                                </nav>
+                                                                        </ul>
+																	
+																		<ul class="in-menu nav navbar-nav">
+                                                                            <li><a class="active_sub" href="online_service_home_after_login.html">Home</a></li>
+                                                                            <li><a  href="PDLandingPage.html">Professional Development</a></li>
+                                                                            <li><a  href="advanced-material-search.html">Materials Support</a></li>
+                                                                            <li><a  href="#">Customer Support</a></li>
+                                                                            <!--<li class="dropdown">
+                                                                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                                                                Welcome Chenyu <span class="caret"></span>
+                                                                            </a>
+                                                                            <ul class="dropdown-menu" role="menu">
+                                                                             <li><a  href="MyAccount_MyProfile.html">My Account</a></li>
+                                                                             <li><a  href="online_service_cart.html">My Cart</a></li>
+                                                                         </ul>
+                                                                     </li>-->
+                                                                 </ul>
 
                                 <!-- Mobile Nav. Container -->
                                 <ul class="mobile-nav">
@@ -313,7 +310,7 @@
             </div>
             <!-- BreadCrumb -->
             <div class="body-wrapper">
-                <div class="container" style="width:100%">
+                <div class="container">
                     <!-- PAGE CONTENTS SHOULD GO HERE, DELETE CONTENTS WITHIN THE CONTAINER DIV AND PASTE YOUR OWN CONTENT-->
                     
 			
@@ -339,7 +336,7 @@
 	        </div>
 			
 	        <!--product family-->
-	        <div style="float:left;width:58%;padding-top:20px;font-size:x-small" >
+	        <div style="float:left;width:75%;padding-top:20px;font-size:small" >
 		       	<table class="table table-striped">
 				 <thead style="font-size:small">
 				 <tr>
