Fixed header link issues

--- a/clickthru/PDLandingPage.html
+++ b/clickthru/PDLandingPage.html
@@ -128,7 +128,7 @@
                                 <!-- //Search Box// -->
 
                                 <nav>
-                                    <ul class="navigation">
+                                    <div class="navigation">
 
                                         <li class="drop">
                                             <a href="#">About Us</a>
@@ -218,7 +218,7 @@
                                         </li>
 
 
-                                    </ul>
+                                    </div>
 
                                 </nav>
 
@@ -238,7 +238,7 @@
                                                                              <li><a  href="online_service_cart.html">My Cart</a></li>
                                                                          </ul>
                                                                      </li>
-                                                                 </ul>
+                                                                 </div>
                                    
                                 </nav>
                                 <!-- Mobile Nav. Container -->
