--- a/clickthru/online_service_cart.html
+++ b/clickthru/online_service_cart.html
@@ -118,7 +118,7 @@
                                 <!-- //Search Box// -->
 
                                 <nav>
-                                    <ul class="navigation">
+                                    <div class="navigation">
 
                                         <li class="drop">
                                             <a href="#">About Us</a>
@@ -208,7 +208,7 @@
                                         </li>
 
 
-                                    </ul>
+                                    </div>
 
                                 </nav>
            <nav>
