--- a/clickthru/online_service_home_after_login.html
+++ b/clickthru/online_service_home_after_login.html
@@ -140,7 +140,7 @@
 
 
                                                             
-                                                                     <ul class="navigation">
+                                                                     <div class="navigation">
 
                                                                         <li class="drop">
                                                                             <a href="#">About Us</a>
@@ -233,7 +233,7 @@
                                                                             </li>
 
 
-                                                                        </ul>
+                                                                        </div>
 																	
 																		<ul class="in-menu nav navbar-nav">
                                                                             <li><a class="active_sub" href="online_service_home_after_login.html">Home</a></li>
