--- a/clickthru/MyAccount_MyProfile.html
+++ b/clickthru/MyAccount_MyProfile.html
@@ -119,7 +119,7 @@
                                 <!-- //Search Box// -->
 
                                 <nav>
-                                    <ul class="navigation">
+                                    <div class="navigation">
 
                                         <li class="drop">
                                             <a href="#">About Us</a>
@@ -206,7 +206,7 @@
                                             <ul><li>
                                                     <a href="#">Member Login</a></ul>
                                         </li>
-                                    </ul>
+                                    </div>
 
                                 </nav>
 
