--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -128,7 +128,7 @@
                                 <!-- //Search Box// -->
 
                                 <nav>
-                                    <ul class="navigation">
+                                    <div class="navigation">
 
                                         <li class="drop">
                                             <a href="#">About Us</a>
@@ -218,7 +218,7 @@
                                         </li>
 
 
-                                    </ul>
+                                    </div>
 
                                 </nav>
 
