--- a/clickthru/online_service_home_before_login.html
+++ b/clickthru/online_service_home_before_login.html
@@ -163,7 +163,7 @@
 
 
 
-                                 <ul class="navigation">
+                                 <div class="navigation">
 
                                                                         <li class="drop">
                                                                             <a href="#">About Us</a>
@@ -272,7 +272,7 @@
                                                                              <li><a  href="online_service_cart.html">My Cart</a></li>
                                                                          </ul>
                                                                      </li>-->
-                                                                 </ul>
+                                                                 </div>
 
                                 <!-- Mobile Nav. Container -->
                                 <ul class="mobile-nav">
